--- a/work/imusic.html
+++ b/work/imusic.html
@@ -80,7 +80,7 @@
                                 <div class="tr__footer__contact mt-10 sm:mt-0">
                                     <div class="tr__footer__contact__block tr__fadeUp">
                                         <span>Email</span>
-                                        <h4 class="overflow-visible"><a class="tr__cursor__hoverable tr__magnetic inline-block" href="mailto:hello@Inkfinity Tech.com">hello@Inkfinity Tech.com</a></h4>
+                                        <h4 class="overflow-visible"><a class="tr__cursor__hoverable tr__magnetic inline-block" href="mailto:hello@inkfinitytech.com">hello@inkfinitytech.com</a></h4>
                                     </div>
                                     <div class="tr__footer__contact__block tr__fadeUp">
                                         <span>Call</span>
